2018-03-06  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_ops): Handle DW_OP_addrx, DW_OP_constx,
	DW_OP_implicit_pointer, DW_OP_entry_value, DW_OP_const_type,
	DW_OP_regval_type, DW_OP_deref_type, DW_OP_xderef_type,
	DW_OP_convert, DW_OP_reinterpret.

2018-03-01  Mark Wielaard  <mark@klomp.org>

	* readelf.c (struct listptr): Add attr field.
	(compare_listptr): Warn when two listptrs for the same offset have
	different attributes.
	(notice_listptr): Take attr as argument and add it to listptr.
	(skip_listptr_hole): New attr argument.
	(next_listptr_offset): New function.
	(print_debug_ranges_section): Pass NULL attr to skip_listptr_hole.
	(attr_callback): Handle DW_AT_GNU_locviews. Call notice_listptr with
	attr.
	(print_debug_loc_section): Keep track of which attr is associated with
	a listptr. If the attr is DW_AT_GNU_locview print view pairs till the
	next listptr offset.

2018-02-09  Mark Wielaard  <mark@klomp.org>

	* elflint.c (check_group): Make sure we can read a complete
	element when iterating over the group.

2018-02-09  Mark Wielaard  <mark@klomp.org>

	* readelf.c (attr_callback): Handle DW_FORM_data16 as Dwarf_Block.

2018-02-09  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_abbrev_section): Print the value of a
	DW_FORM_implicit_const using dwarf_getabbrevattr_data.
	(attr_callback): Handle DW_FORM_implicit_const.

2018-01-30  Mark Wielaard  <mark@klomp.org>

	* readelf.c (dwarf_unit_string): New function.
	(dwarf_unit_name): Likewise.
	(print_debug_units): Use dwarf_get_units and dwarf_cu_die instead
	of dwarf_next_unit. Print unit type, id and subdie if available.

2018-02-09  Joshua Watt  <JPEWhacker@gmail.com>

	* addr2line.c (handle_address): Use FALLTHROUGH macro instead of
	comment.
	* elfcompress.c (parse_opt): Likewise.
	* elflint.c (check_dynamic): Likewise.
	(check_sections): Likewise.
	(check_note_data): Likewise.
	* objdump.c (parse_opt): Likewise.
	* readelf.c (parse_opt): Likewise.
	(attr_callback): Likewise.